--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,13 @@
 // Fonts
-
+@main-font: 'Raleway', sans-serif;;
 
 //  Colors
-@main-background: red; // Original color #2e3141
-@main-color: #3b5acf;
+@main-background: white; // Original color #2e3141
+@nav-background: black;
+// @main-color: #1ac1dd;
+@main-color: #232323;
+@nav-color: white;
 
 // Media Queries
-
+@phone: ~"(max-width: 500px)";
 
