--- a/less/index.less
+++ b/less/index.less
@@ -7,3 +7,66 @@
 
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic");
 
+.banner {
+  width: 100%;
+  height: 95vh;
+  .center;
+  .banner-inner {
+    text-align: center;
+    h2 {
+      font-size: 4rem;
+      padding-bottom: 10px;
+      border-bottom: 3px solid black;
+      @media @phone {
+        font-size: 2rem;
+      }
+    }
+    p {
+      margin-top: 10px;
+      font-size: 2rem;
+      @media @phone {
+        font-size: 1.75rem;
+      }
+    }
+  }
+}
+
+.about {
+  max-width: 1020px;
+  width: 90%;
+  margin: 0 auto;
+  padding: 40px 0;
+  // background-color: red;
+  h3 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  .split {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    p {
+      max-width: 500px;
+      width: 45%;
+      // background-color: green;
+      font-size: 1.6rem;
+    }
+  }
+  p {
+    width: 90%;
+    font-size: 1.6rem;
+    margin: 0 auto;
+  }
+}
+
+.contact {
+  width: 100%;
+  background-color: yellow;
+  h3 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+}
