--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,3 +9,13 @@
     justify-content: @justify;
     align-items: @align; 
 }
+
+.box-shadow(){
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.angle(@leftOrRight, @top, @bottom){
+height: 76px;
+width: 100%;
+background: linear-gradient(to top @leftOrRight, @top 0%, @top 49.9999%, @bottom 50%, @bottom 100%);
+}
