--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,7 @@
 // @main-color: #1ac1dd;
 @main-color: #232323;
 @nav-color: white;
+@border-color: #ccc;
 
 // Media Queries
 @phone: ~"(max-width: 500px)";
