--- a/less/index.less
+++ b/less/index.less
@@ -8,15 +8,18 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic");
 
 .banner {
-  width: 100%;
-  height: 95vh;
+  width: 80%;
+  margin: 100px auto 0;
+  height: 80vh;
   .center;
+  .box-shadow;
   .banner-inner {
     text-align: center;
     h2 {
       font-size: 4rem;
       padding-bottom: 10px;
       border-bottom: 3px solid black;
+      font-weight: bold;
       @media @phone {
         font-size: 2rem;
       }
@@ -35,12 +38,13 @@
   max-width: 1020px;
   width: 90%;
   margin: 0 auto;
-  padding: 40px 0;
+  .between-content;
   // background-color: red;
   h3 {
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
+    font-weight: bold;
   }
   .split {
     display: flex;
@@ -63,10 +67,46 @@
 
 .contact {
   width: 100%;
-  background-color: yellow;
+  .between-content;
+  background-color: #323232;
   h3 {
+    font-weight: bold;
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
+    color: white;
+  }
+  p {
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 1.6rem;
+    color: white;
+  }
+  form {
+    width: 80%;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: rgb(10,10,10);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    input, textarea {
+      background-color: rgba(0,0,0,0);
+      border: 3px solid @border-color;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 20px 0;
+      width: 90%;
+      color: @border-color;
+      &::placeholder {
+        color: @border-color;
+      }
+    }
+    button {
+      .btn;
+    }
   }
 }
