--- a/less/mixins.less
+++ b/less/mixins.less
@@ -19,3 +19,15 @@ height: 76px;
 width: 100%;
 background: linear-gradient(to top @leftOrRight, @top 0%, @top 49.9999%, @bottom 50%, @bottom 100%);
 }
+
+.between-content(){
+    padding: 80px 0;
+}
+
+.btn() {
+    background: rgba(0,0,0,0);
+    border: 3px solid @border-color;
+    color: @border-color;
+    border-radius: 5px;
+    padding: 10px 30px;
+}
