--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+@import url("https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic");
 
 html {
-	font-size: 62.5%;
+	// font-size: 62.5%;
 	font-family: @main-font;
 	min-height: 100%;
 }
