--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,3 +1,32 @@
+.logo {
+  font-weight: bold;
+  font-family: "Ubuntu";
+  a {
+    color: #222322;
+    text-decoration: none;
+    font-size: 2.8rem;
+    padding: 50px;
+  }
+}
+
+nav {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #1f73be;
+  align-items: center;
+}
+
 .nav-links {
-  background-color: red;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  height: 100%;
+  padding: 30px;
+}
+
+.nav-links:hover {
+  background-color: white;
 }
