--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,32 +1,59 @@
+@import '../../styles/reset';
+@import '../../styles/global';
+@import '../../styles/variables';
+@import '../../styles/mixins';
+
+.container {
+  max-width: $container-width;
+  margin: 0px auto;
+}
+
 .logo {
   font-weight: bold;
-  font-family: "Ubuntu";
-  a {
-    color: #222322;
+  padding: 40px 5%;
+  .logo-link {
+    color: $color-black;
     text-decoration: none;
-    font-size: 2.8rem;
-    padding: 50px;
+    font-size: 2.5rem;
+  }
+  .tag-line {
+    margin-left: 0px;
+    padding: 10px 0px 0px 0px;
+    color: lighten($color-black, 40%);
+    font-weight: 400;
+    font-size: .8rem;
   }
 }
 
 nav {
   width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  background-color: #1f73be;
-  align-items: center;
+  height: 50px;
+  background-color: $color-light-accent;
+  .container {
+    @include flex(row, flex-start, center);
+    height: 100%;
+    @media (max-width: 700px) {
+      flex-direction: column;
+      height: max-content;
+    }
+  }
 }
 
 .nav-links {
+  display: flex;
   text-decoration: none;
-  color: white;
-  font-weight: bold;
+  color: $color-white;
+  font-size: .85rem;
   height: 100%;
-  padding: 30px;
+  padding: 0px 20px;
+  align-items: center;
+  justify-content: center;
+  @media (max-width: 700px) {
+    padding: 20px;
+    width: 100%;
+  }
 }
 
 .nav-links:hover {
-  background-color: white;
+  background-color: $color-dark-accent;
 }
