added desktop styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,11 @@ $color-white: #EFF1F3;
 $color-black: #272727;
 $color-gray: #696773;
 $color-dark-accent: #007991;
-$color-light-accent: #009FB7;
+$color-blue: #009FB7;
+$color-purple: #4357AD;
 
 $container-width: 1100px;
+
+$font-big: 2.3rem;
+$font-medium: 24px;
+$font-small: 16px;
