--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,12 @@
-@import '../../styles/reset';
-@import '../../styles/global';
+// @import '../../styles/reset';
+// @import '../../styles/global';
+// @import '../../styles/materialize.scss';
 @import '../../styles/variables';
 @import '../../styles/mixins';
+
+.mainHeader {
+  background-color: white;
+}
 
 .container {
   max-width: $container-width;
@@ -11,16 +16,21 @@
 .logo {
   font-weight: bold;
   padding: 40px 5%;
+  margin: 0px;
+  h1 {
+    margin: 0px;
+  }
   .logo-link {
     color: $color-black;
     text-decoration: none;
     font-size: 2.5rem;
+    font-weight: bold;
   }
   .tag-line {
-    margin-left: 0px;
+    margin: 0px;
     padding: 10px 0px 0px 0px;
     color: lighten($color-black, 40%);
-    font-weight: 400;
+    font-weight: bold;
     font-size: .8rem;
   }
 }
@@ -28,7 +38,7 @@
 nav {
   width: 100%;
   height: 50px;
-  background-color: $color-light-accent;
+  background-color: $color-blue;
   .container {
     @include flex(row, flex-start, center);
     height: 100%;
