--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -1,3 +1,6 @@
+@import '../../styles/variables';
+@import '../../styles/mixins';
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -7,4 +10,29 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $color-white;
+}
+
+.mainContainer {
+  margin: 20px auto;;
+  padding: 40px;
+  max-width: 1100px;
+  background-color: white;
+}
+
+footer {
+  background-color: $color-black;
+  color: $color-white;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: .8rem;
+  a {
+    text-decoration: none;
+    color: $color-blue;
+  }
 }
