--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -10,3 +10,14 @@
   justify-content: $justify;
   align-items: $align;
 }
+
+@mixin boxShadow(){
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+}
+
+@mixin btn() {
+  padding: 20px 40px;
+  @include boxShadow();
+  font-weight: 500;
+  border-radius: 5px;
+}
