--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,3 +10,6 @@ $container-width: 1100px;
 $font-big: 2.3rem;
 $font-medium: 24px;
 $font-small: 16px;
+$font-family: 'Ubuntu', sans-serif;
+
+$shadow: 0px 2px 2px #323232;
