--- a/src/styles/page-styles/index.scss
+++ b/src/styles/page-styles/index.scss
@@ -77,3 +77,12 @@ h2 {
     @include btn();
   }
 }
+
+.contactSection {
+  margin-top: 100px;
+  text-align: center;
+  h3 {
+    font-size: $font-big;
+    color: $color-black;
+  }
+}
