--- a/src/components/Faq/Faq.scss
+++ b/src/components/Faq/Faq.scss
@@ -2,15 +2,26 @@
 @import "../../styles/mixins";
 
 .faq--container {
-  // background-color: $color-blue;
-  margin-bottom: 10px;
+  background-color: $color-blue;
+  margin-bottom: 30px;
+  margin-right: 0px;
+  border-radius: 5px;
+  box-sizing: border-box;
   h4 {
     margin: 0px;
     padding: 30px;
     background-color: $color-blue;
-    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    color: $color-white;
+    text-shadow: 1px 1px 0px black;
   }
   p {
     margin: 0px;
+    box-sizing: border-box;
+    padding: 30px;
+    width: 100%;
+    background-color: $color-white;
+    text-shadow: 1px 1px 0px white;
   }
 }
