--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,8 +11,8 @@
   align-items: $align;
 }
 
-@mixin boxShadow(){
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+@mixin boxShadow() {
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
 @mixin btn() {
@@ -20,4 +20,18 @@
   @include boxShadow();
   font-weight: 500;
   border-radius: 5px;
+  text-decoration: none;
+}
+
+%sideBySide {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+%side {
+  display: block;
+  width: 50%;
+  padding: 30px;
 }
