--- a/src/styles/page-styles/index.scss
+++ b/src/styles/page-styles/index.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import "../../styles/variables";
+@import "../../styles/mixins";
 
 h2 {
   font-size: $font-big;
@@ -14,14 +14,10 @@ h2 {
 }
 
 .sideBySide {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  .left, .right {
-    display: block;
-    width: 50%;
-    padding: 30px;
+  @extend %sideBySide;
+  .left,
+  .right {
+    @extend %side;
   }
   .left {
     font-size: $font-medium;
@@ -56,7 +52,6 @@ h2 {
     .horizontal--list--description {
       font-size: $font-small;
       color: $color-black;
-
     }
   }
 }
