--- a/src/styles/page-styles/commercial-cleaning.scss
+++ b/src/styles/page-styles/commercial-cleaning.scss
@@ -4,10 +4,22 @@
 .sideBySide {
   @extend %sideBySide;
   align-items: flex-start;
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .left,
   .right {
     @extend %side;
+
+    @media (max-width: 1000px) {
+      width: 100%;
+      // background-color: red;
+    }
   }
+
   .cart-svg {
     width: 100%;
   }
@@ -28,5 +40,39 @@
     font-size: $font-small;
     color: $color-white;
     padding: 10px 20px;
+  }
+}
+
+.weOffer {
+  margin-top: 100px;
+  // background-color: green;
+  h4 {
+    text-align: center;
+    font-size: $font-big;
+  }
+  .sideBySide {
+    align-items: flex-start;
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
+  }
+  .left {
+    ul {
+      padding-left: 30px;
+      li {
+        font-size: $font-small;
+        line-height: 1.5;
+        text-align: left;
+      }
+    }
+  }
+  .right {
+    ul {
+      padding-left: 30px;
+      li {
+        font-size: $font-small;
+        line-height: 1.5;
+      }
+    }
   }
 }
