--- a/src/styles/page-styles/index.scss
+++ b/src/styles/page-styles/index.scss
@@ -69,6 +69,8 @@ h2 {
     color: $color-black;
     text-decoration: none;
     background-color: $color-white;
+    font-size: $font-medium;
+    text-shadow: none;
     @include btn();
   }
 }
