--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,5 +1,7 @@
+@import '../_variables.scss';
+
 .above-the-fold {
-    background: linear-gradient(to bottom, rgba(255,255,255,.8),rgba(255,255,255, .8), rgba(255,255,255, .8)) , url('../../images/unsplash3.jpg');
+    background: linear-gradient(to bottom, rgba(255,255,255,.8),rgba(255,255,255, .8), rgba(255,255,255, .8)), url('../../images/unsplash3.jpg');
     background-size: cover, cover;
     background-repeat: no-repeat, no-repeat;
     background-position: center;
@@ -16,7 +18,7 @@
     .calc-div {
         .calc-h3 {
             text-align: center;
-        }
+        }horizontal--list--description
         .calculator {
             display: flex;
             flex-direction: row;
@@ -34,7 +36,7 @@
 
 .sideBySide-container {
     width: 100%;
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid #ededed;
     .sideBySide {
         display: flex;
         flex-direction: row;
@@ -62,17 +64,19 @@
 
 .horizontal-list {
     width: 100%;
-    // background-color: red;
+    // background-color: $color-blue;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     .horizontal--list--item {
         width: 25%;
-        padding: 2%;
+        padding: 60px 2%;
         .horizontal--list--header {
             font-size: 2rem;
             text-align: center;
+            margin: 0px;
+            margin-bottom: 40px;
         }
         .horizontal--list--description {
             font-size: 1.25 rem;
@@ -80,4 +84,53 @@
         }
     }
     
+}
+
+.actionCall--container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
+    .actionCall--img {
+        background-image: url('../../images/unsplash4.jpg');
+        background-size: cover;
+        background-position:center;
+        width:68%;
+    }
+    .actionCall--div {
+        background-color: $color-blue;
+        width: 42%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .actionCall-title{
+            color: white;
+            font-size: $font-big;
+            padding: 0px 60px;
+            text-align: center;
+            text-shadow: 0px 0px 1px lighten($color-black, 25%);
+        }
+        .actionCall--link {
+            font-size: $font-medium;
+            text-decoration: none;
+            color: white;
+        }
+        .actionCall--link:hover {
+            color: darken(white, 10%);
+        }
+    }
+}
+
+.contact--section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: $color-white;
+    padding: 40px 0px;
+    h3 {
+        color: $color-black;
+        font-size: $font-big;
+    }
 }
