adjusted footer, it was to wide

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -6,6 +6,7 @@ footer {
     text-align: center;
     padding: 20px;
     font-size: $font-small;
+    box-sizing: border-box;
     a {
         text-decoration: none;
         color: $color-blue;
