adjusted styling so it wont interfere with other pages

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    h2 {
+    .index--h2 {
         margin-bottom: 80px;
     }
     .calc-div {
