--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,6 +10,7 @@
     top:0;
     left:0;
     right:0;
+    background-color: white;
     @media (max-width: 1300px) {
         flex-direction: column;
         justify-content: center;
@@ -35,9 +36,10 @@
             font-weight: bold;
         }
         a:hover {
-            background-color: rgba(255,255,255,.95);
+            background-color: rgba(0, 0, 0, 0.025);
+            // background-color: #009FB7;
             border-radius: 5px;
-            box-shadow: 0px 1px 2px #323232;
+            // box-shadow: 0px 1px 2px #323232;
         }
     }
 }
